<resources>
    <string name="AI_Membership">Redeem</string>
    <string name="AI_Membership_Plan">AI Membership Plan</string>
    <string name="AI_NC">AI-NC</string>
    <string name="AI_Noise_Cancelling">AI Noise Cancelling</string>
    <string name="AI_Summaries_Based_on_Transcription">AI Summaries Based on Transcription</string>
    <string name="AI_Summaries_Based_on_Transcription_tip">"Don't waste time synthesizing. PLAUD generates key insights from transcripts."</string>
    <string name="AI_Summary">AI Summary</string>
    <string name="AI_generated_Transcript_Summary">AI-generated Transcript &amp; Summary</string>
    <string name="AI_noise_cancellation">AI noise cancelling</string>
    <string name="AI_noise_reduction">AI Noise Cancelling</string>
    <string name="APP_Information">APP Information</string>
    <string name="Activating_a_new_pl_u_DI_i_membership_will_terminate_your_current_membership_and_the_new_program_will_take_effect_immediately_">The plan will take effect right after redemption is activated, which may supersede any remaining unused free trial minutes.</string>
    <string name="Addition_of_120_minutes_of_transcription_time">Addition of 120 minutes of transcription time</string>
    <string name="Advanced_Settings">Advanced Settings</string>
    <string name="After_enabling__Automatic_Call_Recording__the_PLAUD_app_needs_to_keep_running_in_the_background_so_that_it_can_automatically_start_the_device_recording_when_there_is_a_call__Therefore__you_need_to_allow_the_PLAUD_app_to_access_the_location_information__quot_While_Using_the_App_quot__">After enabling  Automatic Call Recording, the PLAUD app needs to keep running in the background so that it can automatically start the device recording when there is a call. Therefore, you need to allow the PLAUD app to access the location information \"While Using the App\".</string>
    <string name="After_enabling_data_protection__the_app_will_only_automatically_upload_local_audio_files_to_the_cloud_when_the_phone_is_connected_to_Wi_Fi_">The app will only automatically upload local audio files to the cloud when the phone is connected to Wi-Fi.</string>
    <string name="After_enabling_the_automatic_upload_to_the_cloud_function__all_files_transferred_from_the_device_to_the_app_s_local_storage_will_be_automatically_uploaded_to_the_cloud_">After enabling the automatic cloud backup feature, all files from local applications will be automatically uploaded to the cloud.</string>
    <string name="After_this_transfer_is_complete__you_will_have_approximately____minutes_of_transfer_time_remaining_this_month__In_order_not_to_affect_subsequent_transfer_requirements__you_are_advised_to_purchase_an_extra_time_package_to_obtain_more_transfer_time_">After completing this transcription, your remaining transcription time for this month is estimated to be less than 60 minutes. To avoid any disruption to your future transcription needs, we recommend purchasing extra time package to obtain more transcription minutes.</string>
    <string name="Aftertheaccountiscanceledwewilldeleteallpersonaldatainyouraccount">"After the account is canceled, we will delete all personal data in your account and the recording files stored in the cloud, and you need to re-register to use the APP again.

If you have any questions or concerns about this Privacy Policy or related matters, please email us at support@plaud.ai."</string>
    <string name="Aggressive">Aggressive</string>
    <string name="All_Note__d_">Files (%d)</string>
    <string name="All_recordings_in_PLAUD_CLOUD_have_been_deleted">All recordings in PLAUD CLOUD have been deleted</string>
    <string name="All_recordings_in_PLAUD_CLOUD_have_been_deleted_tip">Recordings have been deleted from PLAUD CLOUD and any PLAUD APP syncing recordings with PLAUD CLOUD. Synchronization has been stopped.</string>
    <string name="All_recordings_in_PLAUD_CLOUD_will_be_deleted">All recordings in PLAUD CLOUD will be deleted</string>
    <string name="All_recordings_in_PLAUD_CLOUD_will_be_deleted_tip">Recordings will be permanently deleted from PLAUD CLOUD and any other PLAUD APPs syncing recordings with PLAUD CLOUD.</string>
    <string name="Allow_PLAUD_to_Join_Wi_Fi_Network">Allow PLAUD to Join Wi-Fi Network</string>
    <string name="Android_connect_DeviceConnectionFailedPleaseCheckTheDeviceAndNetworkOrContactOnlineCustomerServiceDirectly">Device connection failed, please check the device and network, or directly contact <annotation OnlineService="OnlineService"> online customer service </annotation></string>
    <string name="Android_fileUploadAndDownload_DescriptionOfTheSelectedFileUpload">%1$d audio files have been selected, of which %2$d already exist in the cloud. Do you disregard to continue to upload?</string>
    <string name="Android_fileUploadAndDownload_SelectedAudioFilesIncludingExistingLocalDisregardToContinueToDownload">%1$d audio files have been selected, of which %2$d already exist locally. Do you disregard to continue to download?</string>
    <string name="Android_login_DonItHaveAnAccountYetRegisterNow">Do not have an account yet? <annotation register="register">Register Now</annotation></string>
    <string name="Android_login_IHaveReadAndAgreeToTheUserPrivacyPolicy">By continuing, you acknowedge that you have read and agree to <annotation user="user"> \"User Agreement\" </annotation> and <annotation privacy="privacy"> \"Privacy Policy\" </annotation>.</string>
    <string name="Android_multiTerminalSynchronizationDescription_info">"Log in to the same account and synchronize the files to the cloud. You can manage files on multiple terminals. 
 
 For web version, open "<annotation backstageurl="backstageurl"> in the computer browser http://PLAUD.com </annotation>" 
 
 · Edit and view. you can view the audio synchronized to the cloud, listen back and edit. 
 · Download Audio. It supports downloading audio files directly on the web. 

 open "<annotation officialurl="officialurl"> in the computer browser http://PLAUD.com </annotation></string>
    <string name="Android_myDevice_DonotRepeatRecordingOnlyInRegularly"><b>Non-repeat</b>": Scheduled recording starts only once at %1$s
"</string>
    <string name="Android_myDevice_EveryDayTimingRecordingInDay"><b>Daily</b>": Scheduled recording repeats every day at %1$s
"</string>
    <string name="Android_myDevice_HoursMinutes">%1$d h %2$d m</string>
    <string name="Android_myDevice_PleaseDoNotUnplugTheChargingCableOrToggleTheDeviceSwitchDuringThePeriodWhenTheFirmwareTransferIsCompletedAndTheDeviceIsAutomaticallyUpgradedWhenItIsChargedAbove30Percent">After the firmware transfer is complete, the device will automatically upgrade when charged to more than 30%. <b>Please do not unplug the charging cable or toggle the device switch during this period!</b></string>
    <string name="Android_myDevice_RecordableHooursOfRemainingPower">Recordable duration remaining power: % 1 $s hours</string>
    <string name="Android_myDevice_RemainingAvailable">Remaining available %1$sG</string>
    <string name="Android_myDevice_RemainingRecordableTimeHours">Left Storage For Hours %1$d</string>
    <string name="Android_myDevice_TheDeviceIsBeingUpgradedTheDeviceWillRestartAutomaticallyAfterSuccessfulUpgradeExpectToWaitForAbout1minuteDuringThisTimePleaseDoNotUnplugTheDeviceChargingCableOrToggleTheDeviceSwitch">"Firmware is currently updating. After a successful update, it will automatically restart. Please wait for approximately 1 minute and avoid disconnecting the PLAUD NOTE's charging cable or pressing any of its buttons."</string>
    <string name="Android_myDevice_VersionAvailableForUpdate">Version %1$s is available for update</string>
    <string name="Android_myDevice_WeeklyTimingRecordingInWeek"><b>Weekly</b>: Scheduled recording repeats every week at %1$s</string>
    <string name="Android_play_Highlights">Highlights(%1$d)</string>
    <string name="Android_recordSetting_RecordingMode_Introduce">“<b>AI Omnidirectional Noise Reduction</b>": Omnidirectional pickup, AI noise reduction; single-channel recording, sampling rate 16KHz, bit rate 256Kbps. Audio files are small. Use in noisy environments.

"<b>Original sound recording</b>": real sound quality, no noise reduction; single-channel recording, sampling rate 16KHz, bit rate 256Kbps. Audio files are smaller. 

"<b>Stereo music</b>: real sound quality, no noise reduction; dual-channel recording, sampling rate 48KHz, bit rate 1536Kbps. The audio file is large, and real-time transmission cannot be realized during online recording.</string>
    <string name="Android_recordSetting_SceneSelection_Introduce">“<b>Meeting</b>": The recording file is saved in the ”MEETING“ folder of the U disk.

"<b>Classroom</b>": The recording files are saved in the ”CLASSROOM“ folder of the U disk. 

"<b>Interview</b>": The recording file is saved in the ”INTERVIEW“ folder of the U disk. 

"<b>Music</b>": Stereo music, recording files are saved in the ”MUSIC“ folder of the U disk. 

"<b>Memo (default)</b>: The recording file is saved in the ”RECORD“ folder of the U disk.</string>
    <string name="Android_record_LongestCanBeRecorded">It can be recorded up to %1$s minutes</string>
    <string name="Android_record_MaximumRecordableTime">The maximum recording time is %1$s hours and %2$s minutes</string>
    <string name="Android_register_resend">Resend (%1$d)</string>
    <string name="Android_voicefile_CloudVoices">Cloud Files(%1$d)</string>
    <string name="Android_voicefile_Connetingxxx">Connecting “%1$s</string>
    <string name="Are_you_sure_you_want_to_permanently_delete_all_files_in_the_Trash__This_action_cannot_be_undone_">Are you sure you want to permanently delete all files in the Trash? This action cannot be undone.</string>
    <string name="CAUTION">Caution</string>
    <string name="Delete">Delete</string>
    <string name="How_long_would_you_like_the_device_to_be_idle_before_it_automatically_shuts_down_">How long would you like the device to be idle before it automatically shuts down?</string>
    <string name="Never">Never</string>
    <string name="Next_time">Next time</string>
    <string name="Omnidirectional_voice_pickup_Al_noisecanceling_Channel_single_Sampling_rate_16KHz_Bit_rate_256Kbps">"Omnidirectional voice pickup,Al noise
canceling;
Channel:single;
Sampling rate:16KHz;
Bit-rate:256Kbps;"</string>
    <string name="Please_enter_the_activation_code">Please enter the activation code, case-sensitive</string>
    <string name="Real_sound_quality_no_noise_canceling_Channel_single_Sampling_rate_16KHz_Bit_rate_256Kbps">"Real sound quality,no noise canceling;
Channel:single;
Sampling rate:16KHz;
Bit-rate:256Kbps;"</string>
    <string name="Redemption_code">Activation code</string>
    <string name="Restore_Default_Setting">Restore Default Setting</string>
    <string name="Scheduled_Shutdown">IDLE Shutdown</string>
    <string name="Shut_down_now">Shut down now</string>
    <string name="Unable_to_Update">Unable to Update</string>
    <string name="While_updating_tip">Before updating, please ensure that PLAUD NOTE meets the following two conditions:</string>
    <string name="alert_Cancel">Cancel</string>
    <string name="alert_Retry">Retry</string>
    <string name="cannt_update_device_tip">"1. Keep PLAUD NOTE charging (using a charger, not connected to a computer).
2. Ensure PLAUD NOTE is not in recording mode."</string>
    <string name="login_Confirm">Confirm</string>
    <string name="myDevice_AiNoiseReduction">AI Noise Canceling</string>
    <string name="myDevice_OriginalRecording">Original Sound Recording</string>
    <string name="myDevice_RecordingMode">Recording Mode</string>
    <string name="plaud_15_minutes">15 minutes</string>
    <string name="plaud_1_hour">1 hour</string>
    <string name="plaud_30_minutes">30 minutes</string>
    <string name="plaud_5_hours">5 hours</string>
    <string name="play_Delete">Delete</string>
    <string name="play_Rename">Rename</string>
</resources>