<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/ck_f5f5f5" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ai.plaud.android.plaud.component.AppBarView android:id="@id/title_bar" android:layout_width="fill_parent" android:layout_height="44.0dip" app:bar_left_icon="@drawable/back" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:title="@string/myDevice_RecordingMode" />
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/ai_mode_layout" android:background="@drawable/shape_corner_8_white" android:paddingBottom="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="12.0dip" android:paddingStart="22.0dip">
        <androidx.appcompat.widget.AppCompatTextView android:textSize="17.0sp" android:textStyle="bold" android:textColor="@color/ck_1f1f1f" android:id="@id/title_ai" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/myDevice_AiNoiseReduction" app:layout_constraintTop_toTopOf="parent" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="13.0sp" android:textColor="@color/ck_1f1f1f_70" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/Omnidirectional_voice_pickup_Al_noisecanceling_Channel_single_Sampling_rate_16KHz_Bit_rate_256Kbps" android:lineHeight="16.0sp" app:layout_constraintTop_toBottomOf="@id/title_ai" />
        <androidx.appcompat.widget.AppCompatImageView android:id="@id/ai_choosed" android:visibility="gone" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginTop="12.0dip" android:src="@drawable/choosed" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/normal_mode_layout" android:background="@drawable/shape_corner_8_white" android:paddingTop="16.0dip" android:paddingBottom="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="12.0dip" android:paddingStart="22.0dip" android:paddingEnd="22.0dip">
        <androidx.appcompat.widget.AppCompatTextView android:textSize="17.0sp" android:textStyle="bold" android:textColor="@color/ck_1f1f1f" android:id="@id/title_normal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/myDevice_OriginalRecording" app:layout_constraintTop_toTopOf="parent" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="13.0sp" android:textColor="@color/ck_1f1f1f_70" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/Real_sound_quality_no_noise_canceling_Channel_single_Sampling_rate_16KHz_Bit_rate_256Kbps" android:lineHeight="16.0sp" app:layout_constraintTop_toBottomOf="@id/title_normal" />
        <androidx.appcompat.widget.AppCompatImageView android:id="@id/normal_choosed" android:visibility="gone" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginTop="12.0dip" android:src="@drawable/choosed" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>