<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/shape_corner_24_white" android:paddingBottom="46.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatTextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/ck_1f1f1f" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/CAUTION" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.AppCompatTextView android:textSize="16.0sp" android:textColor="@color/ck_101828_70" android:id="@id/tip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="18.0dip" android:text="@string/Are_you_sure_you_want_to_permanently_delete_all_files_in_the_Trash__This_action_cannot_be_undone_" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/title" />
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/guideline_center" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.5" />
    <androidx.appcompat.widget.AppCompatTextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:id="@id/keep_btn" android:background="@drawable/shape_corner_10_1f1f1f" android:paddingTop="14.0dip" android:paddingBottom="14.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="70.0dip" android:text="@string/alert_Cancel" android:layout_marginStart="24.0dip" android:layout_marginEnd="12.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/guideline_center" app:layout_constraintTop_toBottomOf="@id/tip" />
    <androidx.appcompat.widget.AppCompatTextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/ck_1f1f1f" android:gravity="center" android:id="@id/delete_btn" android:background="@drawable/shape_corner_10_f2f4f7" android:paddingTop="14.0dip" android:paddingBottom="14.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="70.0dip" android:text="@string/Delete" android:layout_marginStart="12.0dip" android:layout_marginEnd="24.0dip" app:layout_constraintEnd_toStartOf="@id/guideline_center" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tip" />
</androidx.constraintlayout.widget.ConstraintLayout>