<?xml version="1.0" encoding="utf-8"?>
<com.lihang.ShadowLayout android:layout_width="fill_parent" android:layout_height="wrap_content" app:hl_cornerRadius_leftTop="8.0dip" app:hl_cornerRadius_rightTop="8.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatImageView android:id="@id/close" android:paddingTop="12.0dip" android:layout_width="50.0dip" android:layout_height="32.0dip" android:src="@drawable/close_black" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/ck_1f1f1f" android:gravity="center" android:id="@id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/Redemption_code" app:layout_constraintTop_toBottomOf="@id/close" />
        <androidx.appcompat.widget.AppCompatEditText android:textSize="12.0sp" android:id="@id/input" android:background="@drawable/shape_code_input_bg" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginTop="32.0dip" android:hint="@string/Please_enter_the_activation_code" android:layout_marginStart="26.0dip" android:layout_marginEnd="26.0dip" app:layout_constraintTop_toBottomOf="@id/title" style="@style/LoginEditText" />
        <ai.plaud.android.plaud.component.CtaButton android:textSize="17.0sp" android:id="@id/confirm_btn" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginTop="20.0dip" android:layout_marginBottom="36.0dip" android:text="@string/login_Confirm" android:layout_marginStart="26.0dip" android:layout_marginEnd="26.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@id/input" style="@style/ButtonEnable" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.lihang.ShadowLayout>